<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#43b3e6"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/et_user"
        android:layout_centerInParent="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_welcome_logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_pass"
        android:backgroundTint="#FFF"
        android:hint="@string/username"
        android:paddingBottom="20dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="13sp"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#FFF"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="13sp"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_pass"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/login"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="10dp"
        android:text="OR"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="15sp"
        tools:ignore="HardcodedText" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_or"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_welcome_fb_login"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btn_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_or"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/connect_with_facebook"
        android:textColor="#FFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_fb"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_fb"
            android:text="doesn't have account ?"
            android:textColor="#FFF"
            android:textSize="13sp"
            tools:ignore="HardcodedText,ObsoleteLayoutParam" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_fb"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/txt_question"
            android:text="@string/register"
            android:textColor="#FFF"
            android:textSize="13sp"
            android:textStyle="bold"

            tools:ignore="ObsoleteLayoutParam" />
    </LinearLayout>

</RelativeLayout>